--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ test/dummy/db/*.sqlite3
 test/dummy/db/*.sqlite3-journal
 test/dummy/log/*.log
 test/dummy/tmp/
+id_rsa
+.gitconfig
+Vagrantfile
+/.vagrant
